Closed Bug 1026768 Opened 10 years ago Closed 10 years ago

Pass the restyle hint through from ProcessOneRestyle to ComputeStyleChangeFor rather than converting it to a boolean and back

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

Attachments

(1 file)

This was originally bug 996796 patch 6, but it's also needed bug 931668,
so I'm moving it into its own bug.
Comment on attachment 8441693 [details] [diff] [review]
Pass the restyle hint through from ProcessOneRestyle to ComputeStyleChangeFor rather than converting it to a boolean and back

Review of attachment 8441693 [details] [diff] [review]:
-----------------------------------------------------------------

r=me with comment addressed.

::: layout/base/RestyleManager.cpp
@@ +2970,5 @@
>                                 aMinChange, aRestyleTracker,
>                                 treeMatchContext,
>                                 visibleKidsOfHiddenElement);
>  
> +      restyler.Restyle(aRestyleHint);

I assume by this point eRestyle_LaterSiblings will never be in aRestyleHint, since RestyleTracker::ProcessOneRestyle is asserting this?  Can you add some assertions in ElementRestyler::Restyle{,Self} as they check aRestyleHint in ways that assume that flag isn't in there, and which currently we ensure by checking the bool and only passing in eRestyle_Self/Subtree/0.
Attachment #8441693 - Flags: review?(cam) → review+
https://hg.mozilla.org/mozilla-central/rev/bdf18e88d834
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: