Bug 1026768 - Pass the restyle hint through from ProcessOneRestyle to ComputeStyleChangeFor rather than converting it to a boolean and back.  r=heycam

This was originally bug 996796 patch 6, but it's also needed bug 931668,
so I'm moving it into its own bug.