layout/base/RestyleTracker.cpp
@@ -119,8 +119,7 @@ RestyleTracker::ProcessOneRestyle(Element* aElement,
   nsIFrame* primaryFrame = aElement->GetPrimaryFrame();
   if (aRestyleHint & (eRestyle_Self | eRestyle_Subtree)) {
     mRestyleManager->RestyleElement(aElement, primaryFrame, aChangeHint,
-                                    *this,
-                                    (aRestyleHint & eRestyle_Subtree) != 0);
+                                    *this, aRestyleHint);
   } else if (aChangeHint &&
              (primaryFrame ||
               (aChangeHint & nsChangeHint_ReconstructFrame))) {
